--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/logooranje.jpg" alt="Studio Matta" /></span>
+					<span class="image avatar"><img src="images/logooranje.jpg" id="logo" alt="Studio Matta" /></span>
 					<p>- voor iedereen die wil groeien -</br></p>
 				</header>
 				<nav id="nav">
