--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/logooranje.jpg" id="logo" alt="Studio Matta" /></span>
+					<span class="image avatar"><img src="images/logooranje.jpg" id='logo' alt="Studio Matta" /></span>
 					<p>- voor iedereen die wil groeien -</br></p>
 				</header>
 				<nav id="nav">
@@ -84,7 +84,7 @@
 									<h3>Waarom Wildgroei</h3>
 									<div class="features">
 										<article>
-											<a href="#" onClick="return false;" class="image"><img src="images/vaart.jpg" alt="Wildgroei" /></a>
+											<a href="waaromwildgroei" class="image"><img src="images/vaart.jpg" alt="Wildgroei" /></a>
 											<div class="inner">
 												<h4>Natuurlijk</h4>
 												<p>We zitten veel in ons hoofd en vergeten soms dat voelen en bewegen ook bij het leven hoort. Daarom staat Wildgroei voor een vorm van coaching waar <b>natuur actief deel uitmaakt</b> van de sessies. De rustgevende en open omgeving creëert ruimte in je hoofd en door de beweging en interactie met de natuur wordt je brein gestimuleerd. Zo komen we makkelijker tot oplossingen en nieuwe inzichten.</p>
